...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <RadioButton
                    android:id="@+id/salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["salad"].name}'
                    android:onClick='@{()->viewModel.setSide("salad")}'
                    tools:text="Side 1" />
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/salad_description" />
                <RadioButton
                    android:id="@+id/soup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["soup"].name}'
                    android:onClick='@{()->viewModel.setSide("soup")}'
                    tools:text="Side 2" />
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/soup_description" />
                <RadioButton
                    android:id="@+id/potatoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["potatoes"].name}'
                    android:onClick='@{()->viewModel.setSide("potatoes")}'
                    tools:text="Side 3" />
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/potato_description" />
                <RadioButton
                    android:id="@+id/rice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["rice"].name}'
                    android:onClick='@{()->viewModel.setSide("rice")}'
                    tools:text="Side 4" />
...
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/base_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/side_options" />
            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00"
                android:text="@{@string/subtotal(viewModel.subtotal)}"/>
            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Order.Button.Cancel"
                android:onClick="@{()->fragment.cancelOrder()}"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />
            <Button
                android:id="@+id/next_button"
                style="@style/Widget.Order.Button.Next"
                android:onClick="@{()->fragment.goToNextScreen()}"
...
