...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <RadioButton
                    android:id="@+id/cauliflower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["cauliflower"].name}'
                    tools:text="Entree 1"
                    android:onClick='@{()->viewModel.setEntree("cauliflower")}'/>
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cauliflower_description" />
                <RadioButton
                    android:id="@+id/chili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["chili"].name}'
                    tools:text="Entree 2"
                    android:onClick='@{()->viewModel.setEntree("chili")}'/>
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chili_description" />
                <RadioButton
                    android:id="@+id/pasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["pasta"].name}'
                    tools:text="Entree 3"
                    android:onClick='@{()->viewModel.setEntree("pasta")}'/>
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pasta_description" />
                <RadioButton
                    android:id="@+id/skillet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["skillet"].name}'
                    tools:text="Entree 4"
                    android:onClick='@{()->viewModel.setEntree("skillet")}'/>
...
