<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_checkout"
    tools:context=".ui.order.CheckoutFragment">

       <data>
        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />

        <variable
            name="fragment"
            type="com.example.lunchtray.ui.order.CheckoutFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <TextView
                android:id="@+id/order_summary"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/order_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/entree_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_summary"
                android:text="@{viewModel.entree.name}"
                tools:text="Cauliflower" />

                       <TextView
                android:id="@+id/entree_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/entree_selection"
                tools:text="$7.00"
                android:text="@{viewModel.entree.formattedPrice}"/>

                       <TextView
                android:id="@+id/side_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entree_selection"
                tools:text="Spicy Potatoes"
                android:text="@{viewModel.side.name}"/>

                       <TextView
                android:id="@+id/side_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/side_selection"
                tools:text="$2.00"
                android:text="@{viewModel.side.formattedPrice}"/>

                        <TextView
                android:id="@+id/accompaniment_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/side_selection"
                android:text="@{viewModel.accompaniment.name}"
                tools:text="Mixed Berries" />

                       <TextView
                android:id="@+id/accompaniment_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/accompaniment_selection"
                tools:text="$1.00"
                android:text="@{viewModel.accompaniment.formattedPrice}"/>
                        <View
                android:id="@+id/divider"
                style="@style/Widget.LunchTray.Divider"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accompaniment_selection" />

                       <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal: $10.00"
                android:text="@{@string/subtotal(viewModel.subtotal)}"/>

                       <TextView
                android:id="@+id/tax"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                tools:text="Tax: $0.73"
                android:text="@{@string/tax(viewModel.tax)}"/>

                        <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tax"
                tools:text="Total: $10.73"
                android:text="@{@string/total(viewModel.total)}"/>

                      <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/submit"
                android:onClick="@{()->fragment.submitOrder()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total"/>

                       <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/cancel"
                android:onClick="@{()->fragment.cancelOrder()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
